# ma-ya-ma-tauri

./: .clangd  .gitignore  CMakeLists.txt  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: alpha-build.yml
src/: App.tsx  consts.ts  main.ts  shims.d.ts  vite-env.d.ts
src-cpp/: Board.cc  Buffer.cc  Game.cc  Keyword.cc  Tile.cc  TileDiffList.cc  TileShieldTree.cc  mayama.cc  utils.cc
src-cpp/cxxbridge/src/: lib.rs.cc  lib.rs.h
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/include/: Board.hpp  Buffer.hpp  Game.hpp  Keyword.h  Tile.h  Tile.hpp  TileDiffList.hpp  TileShieldTree.hpp  mayama.h  mayama.hpp  utils.hpp
src-tauri/resources/levels/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src-tauri/resources/themes/: default.json
src-tauri/src/: Tile.cc  level.rs  lib.rs  main.rs  mayama.cc  theme.rs
src/components/: BackToHome.tsx  Board.module.scss  Board.tsx  Buffer.tsx  Refresh.tsx  Tile.tsx  TileContainer.tsx
src/composables/: colorMode.ts  windowScale.ts
src/layouts/: default.tsx
src/pages/: game.tsx  index.tsx  levels.tsx  records.tsx
src/state/: config.ts  game.ts
src/styles/: main.scss  transition.scss
src/types/: index.ts
src/utils/: index.ts
