[package]
name = "ma-ya-ma"
version = "0.1.1"
description = "A Tauri App"
authors = ["lnkkerst <lnkkerst04@gmail.com>", "Akisui <siesta@mail.sdu.edu.cn>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
cxx-build = { version = "1.0" }
cmake = { version = "0.1" }
glob = { version = "0.3" }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "path-all", "shell-open", "window-all", "windows7-compat"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cxx = { version = "=1.0.93" }
anyhow = { version = "1.0" }
phf = { version = "0.11", features = ["macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
